--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -12,8 +12,14 @@ jobs:
       id-token: write
       contents: read
     steps:
-      - name: Deploy the application
+      - name: Pull repository
+        uses: actions/checkout@v2
+      - name: Install dependencies
+        run: npm install
+      - name: Assume deployer role
         uses: aws-actions/configure-aws-credentials@v1
         with:
           role-to-assume: arn:aws:iam::216084937001:role/InfrastructureStack-applicationDeployerRole4518AA3-ZB3SU6HC4VUA
           aws-region: us-east-1
+      - name: Deploy the application
+        run: npm run deploy:cicd
