--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -15,6 +15,7 @@ jobs:
       - name: Pull repository
         uses: actions/checkout@v2
       - name: Install dependencies
+        working-directory: ./application
         run: npm install
       - name: Assume deployer role
         uses: aws-actions/configure-aws-credentials@v1
@@ -22,4 +23,5 @@ jobs:
           role-to-assume: arn:aws:iam::216084937001:role/InfrastructureStack-applicationDeployerRole4518AA3-ZB3SU6HC4VUA
           aws-region: us-east-1
       - name: Deploy the application
+        working-directory: ./application
         run: npm run deploy:cicd
