--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -21,7 +21,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1
         with:
           role-to-assume: arn:aws:iam::216084937001:role/InfrastructureStack-applicationDeployerRole4518AA3-ZB3SU6HC4VUA
-          aws-region: us-east-1
+          aws-region: eu-west-1
       - name: Deploy the application
         working-directory: ./application
         run: npm run deploy:cicd
