--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -23,6 +23,8 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::216084937001:role/InfrastructureStack-applicationDeployerRole4518AA3-1NNX60MARZ9GA
           aws-region: eu-west-1
+      - name: Check identity
+        run: aws sts get-caller-identity
       - name: Deploy the application
         working-directory: ./application
         run: npm run deploy:cicd
