--- a/application/package.json
+++ b/application/package.json
@@ -14,17 +14,12 @@
     "get-bootstrap-template": "npm run cdk bootstrap -- --show-template > ./bootstrap-template.yaml"
   },
   "devDependencies": {
-    "@aws-cdk/assertions": "1.134.0",
-    "@types/jest": "^26.0.10",
+    "aws-cdk-lib": "2.0.0",
+    "constructs": "10.0.9",
     "@types/node": "10.17.27",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.2.0",
-    "aws-cdk": "1.134.0",
+    "aws-cdk": "2.0.0",
     "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "typescript": "4.5.2"
   },
-  "dependencies": {
-    "@aws-cdk/core": "1.134.0",
-    "source-map-support": "^0.5.16"
-  }
+  "dependencies": {}
 }
