--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -7,24 +7,18 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "jest",
     "cdk": "cdk",
     "bootstrap": "npm run cdk bootstrap",
     "deploy": "npm run cdk deploy"
   },
   "devDependencies": {
+    "aws-cdk-lib": "2.0.0",
+    "constructs": "10.0.9",
     "@aws-cdk/assertions": "1.134.0",
-    "@aws-cdk/aws-iam": "1.134.0",
-    "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
-    "aws-cdk": "1.134.0",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.2.0",
+    "aws-cdk": "2.0.0",
     "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "typescript": "4.5.2"
   },
-  "dependencies": {
-    "@aws-cdk/core": "1.134.0",
-    "source-map-support": "^0.5.16"
-  }
+  "dependencies": {}
 }
